add greenclip rofi

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -37,6 +37,8 @@
     ~/.xinitrc: xinitrc
     ~/.config/alacritty/alacritty.yml: alacritty.yml
     ~/.config/picom/picom.conf: picom.conf
+    ~/.config/rofi/config.rasi: rofi_config.rasi
+    ~/.config/greenclip.toml: greenclip.toml
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
